fix: make scroll indicator more visible

--- a/styles/minimap.less
+++ b/styles/minimap.less
@@ -111,7 +111,7 @@ atom-text-editor, html {
       width: 2px;
       min-height: 2px;
       z-index: 10;
-      background: @background-color-selected;
+      background: #fff - @background-color-selected; // invert color
     }
 
     .open-minimap-quick-settings {
